--- a/index.html
+++ b/index.html
@@ -5,22 +5,53 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Photo Viewer</title>
   <style>
-    body {
+    /* Ensure the body and html take up the full screen */
+    html, body {
+      height: 100%;
+      margin: 0;
+      padding: 0;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      background-color: #000; /* Black background to enhance image visibility */
+    }
+
+    /* Text at the top */
+    #header {
+      color: red;
+      font-size: 40px;
+      font-weight: bold;
+      text-align: center;
+      margin-top: 20px;
+    }
+
+    /* Timer text below the header */
+    #timer {
+      color: white;
+      font-size: 24px;
+      margin-top: 10px;
+      font-family: Arial, sans-serif;
+    }
+
+    /* The image container will take up the entire screen */
+    #photo-container {
+      width: 100%;
+      height: 100%;
+      position: relative;
       display: flex;
       justify-content: center;
       align-items: center;
-      height: 100vh;
-      margin: 0;
-      background-color: #f0f0f0;
-      position: relative;
     }
 
-    #photo-container img {
-      max-width: 90%;
-      max-height: 90%;
-      display: block;
+    /* The image will fill the entire screen */
+    #photo {
+      width: 100%;
+      height: 100%;
+      object-fit: cover; /* Ensures the image covers the screen without distortion */
     }
 
+    /* Navigation buttons (text boxes) */
     .navigation {
       position: absolute;
       bottom: 20px;
@@ -37,8 +68,9 @@
       text-align: center;
       font-size: 16px;
       cursor: pointer;
-      border: 2px solid #333;
-      background-color: rgba(255, 255, 255, 0.8);
+      border: 2px solid #fff;
+      background-color: rgba(0, 0, 0, 0.5);
+      color: #fff;
       border-radius: 5px;
     }
 
@@ -50,6 +82,9 @@
 </head>
 <body>
 
+<div id="header">Get to the End</div>
+<div id="timer">01:00</div>
+
 <div id="photo-container">
   <img id="photo" src="" alt="Current photo">
 </div>
@@ -59,6 +94,7 @@
   <input type="text" class="nav-input" id="forward" value="Forward" readonly>
 </div>
 
-<script src="index.js"></script>
+<script src="photoViewer.js"></script>
 </body>
 </html>
+
