--- a/index.html
+++ b/index.html
@@ -1,100 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Photo Viewer</title>
-  <style>
-    /* Ensure the body and html take up the full screen */
-    html, body {
-      height: 100%;
-      margin: 0;
-      padding: 0;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      background-color: #000; /* Black background to enhance image visibility */
-    }
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Photo Viewer</title>
+    <style>
+        /* Basic styling for centering the content */
+        body {
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            background-color: black;
+            color: white;
+            font-family: Arial, sans-serif;
+            text-align: center;
+        }
 
-    /* Text at the top */
-    #header {
-      color: red;
-      font-size: 40px;
-      font-weight: bold;
-      text-align: center;
-      margin-top: 20px;
-    }
+        /* The image should fill the entire screen */
+        #photo {
+            width: 100vw;
+            height: 100vh;
+            object-fit: cover;
+        }
 
-    /* Timer text below the header */
-    #timer {
-      color: white;
-      font-size: 24px;
-      margin-top: 10px;
-      font-family: Arial, sans-serif;
-    }
+        /* Timer styling */
+        #timer {
+            position: fixed;
+            top: 10px;
+            left: 50%;
+            transform: translateX(-50%);
+            font-size: 2rem;
+        }
 
-    /* The image container will take up the entire screen */
-    #photo-container {
-      width: 100%;
-      height: 100%;
-      position: relative;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
+        /* Navigation buttons at the bottom */
+        .nav-buttons {
+            position: fixed;
+            bottom: 20px;
+            right: 20px;
+            display: flex;
+            gap: 10px;
+        }
 
-    /* The image will fill the entire screen */
-    #photo {
-      width: 100%;
-      height: 100%;
-      object-fit: cover; /* Ensures the image covers the screen without distortion */
-    }
+        .nav-buttons div {
+            padding: 10px 20px;
+            background-color: rgba(255, 0, 0, 0.7);
+            color: white;
+            font-weight: bold;
+            cursor: pointer;
+            border-radius: 5px;
+        }
 
-    /* Navigation buttons (text boxes) */
-    .navigation {
-      position: absolute;
-      bottom: 20px;
-      right: 20px;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
+        .nav-buttons div:hover {
+            background-color: rgba(255, 0, 0, 1);
+        }
 
-    .nav-input {
-      width: 80px;
-      height: 30px;
-      margin: 5px;
-      text-align: center;
-      font-size: 16px;
-      cursor: pointer;
-      border: 2px solid #fff;
-      background-color: rgba(0, 0, 0, 0.5);
-      color: #fff;
-      border-radius: 5px;
-    }
-
-    .nav-input:focus {
-      outline: none;
-      border-color: #007BFF;
-    }
-  </style>
+        /* Frame number styling (Top left) */
+        #frameNumber {
+            position: fixed;
+            top: 10px;
+            left: 10px;
+            font-size: 2rem;
+            font-weight: bold;
+        }
+    </style>
 </head>
 <body>
+    <!-- Photo display area -->
+    <img id="photo" src="" alt="Photo Viewer">
 
-<div id="header">Get to the End</div>
-<div id="timer">01:00</div>
+    <!-- Timer Display -->
+    <div id="timer">01:00</div>
 
-<div id="photo-container">
-  <img id="photo" src="" alt="Current photo">
-</div>
+    <!-- Frame Number Display -->
+    <div id="frameNumber">Frame 001</div>
 
-<div class="navigation">
-  <input type="text" class="nav-input" id="backward" value="Backward" readonly>
-  <input type="text" class="nav-input" id="forward" value="Forward" readonly>
-</div>
+    <!-- Navigation buttons -->
+    <div class="nav-buttons">
+        <div id="backward">Backward</div>
+        <div id="forward">Forward</div>
+    </div>
 
-<script src="photoViewer.js"></script>
+    <script src="photoViewer.js"></script>
 </body>
 </html>
+
 
