--- a/index.html
+++ b/index.html
@@ -83,6 +83,6 @@
         <div id="forward">Forward</div>
     </div>
 
-    <script src="photoViewer.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
