--- a/index.html
+++ b/index.html
@@ -57,25 +57,27 @@
             background-color: rgba(255, 0, 0, 1);
         }
 
-        /* Frame number styling (Top left) */
-        #frameNumber {
+        /* Title text at the top */
+        #title {
             position: fixed;
             top: 10px;
-            left: 10px;
-            font-size: 2rem;
+            left: 50%;
+            transform: translateX(-50%);
+            font-size: 3rem;
             font-weight: bold;
+            color: red;
         }
     </style>
 </head>
 <body>
+    <!-- Title Text -->
+    <div id="title">Get to the End</div>
+
     <!-- Photo display area -->
     <img id="photo" src="" alt="Photo Viewer">
 
     <!-- Timer Display -->
     <div id="timer">01:00</div>
-
-    <!-- Frame Number Display -->
-    <div id="frameNumber">Frame 001</div>
 
     <!-- Navigation buttons -->
     <div class="nav-buttons">
@@ -83,6 +85,7 @@
         <div id="forward">Forward</div>
     </div>
 
+    <!-- Reference to the JavaScript file -->
     <script src="index.js"></script>
 </body>
 </html>
