--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
             text-transform: lowercase; /* Makes all text lowercase */
         }
 
-        /* The image container: making it square and centered */
+        /* The image container: making it smaller and centered */
         #photo-container {
-            width: 80vw; /* 80% of the screen width */
-            height: 80vw; /* same as width for a square aspect ratio */
+            width: 50vw; /* Adjusted to 50% of the screen width */
+            height: 50vw; /* Same as width for a square aspect ratio */
             display: flex;
             justify-content: center;
             align-items: center;
