--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=.9">
     <title>photo viewer</title>
     <style>
         /* Basic styling for centering the content */
@@ -40,8 +40,8 @@
 
         /* The image container: 4:3 aspect ratio and moved up */
         #photo-container {
-            width: 60vw; /* 60% of the screen width */
-            height: 45vw; /* 45% of the screen width for a 4:3 aspect ratio */
+            width: 40vw; /* 60% of the screen width */
+            height: 30vw; /* 45% of the screen width for a 4:3 aspect ratio */
             display: flex;
             justify-content: center;
             align-items: center;
