--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
         body {
             margin: 0;
-            padding: 0;
+            padding: 10;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -30,7 +30,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            width: 60vw;
+            width: 90vw;
             height: 45vw;
             margin-top: 30px;
             background-color: black;
@@ -67,6 +67,7 @@
         }
 
         #timer {
+        	position: fixed;
             font-size: 2rem;
             font-weight: bold;
             margin-top: 20px;
