--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Photo Viewer with Timer</title>
+    <title>Nothing</title>
     <style>
         body {
             margin: 0;
-            padding: 0;
+            padding: 10;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -17,6 +17,7 @@
             color: white;
             font-family: 'Times New Roman', serif;
             text-align: center;
+            padding-bottom: 50px;
         }
 
         #header {
@@ -30,7 +31,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            width: 60vw;
+            width: 90vw;
             height: 45vw;
             margin-top: 30px;
             background-color: black;
@@ -43,10 +44,8 @@
         }
 
         .nav-buttons {
-            position: fixed;
             bottom: 20px;
             left: 50%;
-            transform: translateX(-50%);
             display: flex;
             gap: 30px;
         }
@@ -79,7 +78,7 @@
 
     <!-- Photo Container -->
     <div id="photo-container">
-        <img id="photo" src="" alt="photo viewer">
+        <img id="photo" src="" alt="nothing">
     </div>
 
     <!-- Timer -->
